--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Venues</h3>
-                            <p>abc</p>
+                            <p>Lorem ipsum dolor sit ame consectetur adipisicing elit</p>
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                         </div>
                         <div class="media-body">
                             <h2>Have a question or need a custom quote?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +0123 456 70 80</p>
+                            <p>Contact us at +91 860 860 8163</p>
                         </div>
                     </div>
                 </div>
